# WatchMySix

./: Dockerfile  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/: __main__.py  config.py  job_runner.py  main.py  models.py  tools.py
backend/scripts/: migrate.py  prestart.sh  validate_env.py
backend/tests/: test_bruteforce_defaults.py
docker/: nginx.conf
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/scripts/: build.js
frontend/src/: App.css  App.jsx  index.css  index.html
frontend/src/utils/: job.js
frontend/test/: parseJobId.test.js
scripts/: entrypoint.sh
