[tool.poetry]
name = "watchmysix-backend"
version = "0.1.0"
description = "Backend service for WatchMySix scanning orchestration"
authors = ["WatchMySix Developers <devs@example.com>"]
packages = [
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
